--- a/app/views/interested/comment/v8/your-email.html
+++ b/app/views/interested/comment/v8/your-email.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'What’s your email address' %}
+{% set title = 'What’s your email address (optional)' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
