--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -15,7 +15,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     <!-- <span class="govuk-caption-l">
-      Comment on planning appeals
+      Comment on a planning appeal
     </span> -->
     <h1 class="govuk-heading-l">
       {{ title }}
