--- a/app/views/interested/find-appeal/v7/appeal-notice-email-householder.html
+++ b/app/views/interested/find-appeal/v7/appeal-notice-email-householder.html
@@ -9,7 +9,7 @@
 <!-- faux email header -->
 <section>
   <p class="govuk-body">
-    <strong>Subject:</strong> You are invited to comment on a planning appeal
+    <strong>Subject:</strong> You are invited to Comment on a planning appeal
   </p>
   <p class="govuk-body">
     <strong>To:</strong> example@email.com<br>
