More than one appeal

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,9 @@
           <a href="/appeal/service/">Service messages</a>
         </li>
         <li>
+          <a href="appeal/more-than-one-appeal/">More than one appeal</a>
+        </li>
+        <li>
           GOV.UK guidance (needs review)
         </li>
         <li>
