--- a/app/views/appeal/before-you-start/v15/planning/cya.html
+++ b/app/views/appeal/before-you-start/v15/planning/cya.html
@@ -6,7 +6,6 @@ w{% extends location+"common/cya.html" %}
   {% set decisionDate = (data['decision-date-day'] or '1') +' '+ (data['decision-date-month'] | formatMonth or 'August') +' '+ (data['decision-date-year'] or '2022') %}
   {% set decisionDate = (data['decision-due-date-day'] or '1') +' '+ (data['decision-due-date-month'] | formatMonth or 'August') +' '+ (data['decision-due-date-year'] or '2022') %}
 
-
   {{ govukSummaryList({
     classes: 'govuk-!-margin-bottom-9',
     rows: [
@@ -44,10 +43,26 @@ w{% extends location+"common/cya.html" %}
       },
       {
         key: {
+          text: 'Listed building consent appeal only'
+        },
+        value: {
+          text: data['lbcConsent'] or 'No'
+        },
+        actions: {
+          items: [
+            {
+              href: 'type',
+              text: 'Change'
+            }
+          ]
+        }
+      } if data['lbcStatus'] != 'No',
+      {
+        key: {
           text: 'Appealing'
         },
         value: {
-          text: 'A planning decision'
+          text: 'A planning decision' if data['lbcConsent'] != 'Yes' else 'A listed building consent'
         },
         actions: {
           items: [
@@ -63,7 +78,7 @@ w{% extends location+"common/cya.html" %}
           text: 'Application type'
         },
         value: {
-          text: data['planning-type'] or 'Full planning'
+          text: 'Full planning' if data['planning-type'] != 'enforcement notice' else 'Enforcement notice'
         },
         actions: {
           items: [
