Logic updates for listed building before you start, check answers

--- a/app/views/appeal/before-you-start/v15/listed-building-options.html
+++ b/app/views/appeal/before-you-start/v15/listed-building-options.html
@@ -18,11 +18,11 @@
     items: [
       {
         value: "lbc",
-        text: "Listed building decision"
+        text: "A listed building decision"
       },
       {
         value: "planning",
-        text: "Planning decision"
+        text: "A planning decision"
       },
       {
         value: "more",
