--- a/app/views/appeal/before-you-start/v15/planning/enforcement-check.html
+++ b/app/views/appeal/before-you-start/v15/planning/enforcement-check.html
@@ -1,5 +1,5 @@
 {% extends '_layouts/layout-main.html' %}
-{% set prototypeLinks = [{href: '../errors/no-enforcement', text: 'Yes: no enforcement appeals yet'}] %}
+<!-- {% set prototypeLinks = [{href: '../errors/no-enforcement', text: 'Yes: no enforcement appeals yet'}] %} -->
 
 {% set title = 'Have you received an enforcement notice?' %}
 
