Updates to BYS for LBCs - reordering filters

--- a/app/views/appeal/before-you-start/index.html
+++ b/app/views/appeal/before-you-start/index.html
@@ -41,10 +41,22 @@
           new routing for listed building consent appeals
         </li>
         <li>
+          filters for unsupported appeal types are left
+        </li>
+        <li>
+          check your answers updates to reflect the changes
+        </li>
+        <li>
+          updated task list (changed order of data)
+        </li>
+        <li>
+          meta data for appeal added to task list
+        </li>
+        <li>
           removed listed building questions from other appeal routes
         </li>
         <li>
-          listed buidling appeal only shows when there is a relation to a listed building
+          removed enforcement question in planning appeal types (while it is unsupported)
         </li>
       </ul>
 
