--- a/app/views/appeal/before-you-start/v15/listed-building-appeal.html
+++ b/app/views/appeal/before-you-start/v15/listed-building-appeal.html
@@ -15,17 +15,14 @@
         isPageHeading: true
       }
     },
-    hint: {
-      text: "This includes changing your last name or spelling your name differently."
-    },
     items: [
       {
-        html: 'Yes, a listed building is involved as part of this appeal',
+        html: 'Yes, a listed building is part of this appeal',
         value: 'Yes',
         checked: checked('lbcStatus','Yes')
       },
       {
-        html: 'No, a listed building is not involved as part of this appeal',
+        html: 'No, a listed building is not part of this appeal',
         value: 'No',
         checked: checked('lbcStatus','No')
       }
