--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,12 @@
           <a href="/appeal/final-comments/">Final comments for full planning</a>
         </li>
         <li>
+          <a href="/appeal/lbc/">Listed building consent</a>
+        </li>
+        <li>
+          <a href="/appeal/full/">Full planning</a>
+        </li>
+        <li>
           Enforcement (needs review)
         </li>
         <li>
