BYS updates for LBC, change for routing

--- a/app/views/appeal/before-you-start/v15/listed-building-options.html
+++ b/app/views/appeal/before-you-start/v15/listed-building-options.html
@@ -18,12 +18,13 @@
     items: [
       {
         value: "lbc",
-        text: "A listed building decision"
+        text: "Listed building decision"
       },
       {
         value: "planning",
-        text: "A planning decision"
+        text: "Planning decision"
       }
     ]
   }) }}
+
 {% endblock %}
