New task list for LBC

--- a/app/views/appeal/lbc/v2/task-list.html
+++ b/app/views/appeal/lbc/v2/task-list.html
@@ -112,11 +112,11 @@
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="about-you/contact-details" aria-describedby="your-contact-details">
                   Your contact details
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="your-contact-details">Completed</strong>
             </li>
           </ul>
         </li>
@@ -129,19 +129,19 @@
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="about-the-site/address" aria-describedby="site-address">
                   Site address
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="site-address">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="site-status">
+                <a href="about-the-site/site-visibility" aria-describedby="site-access">
                   Access to the site
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="site-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="site-access">Completed</strong>
             </li>
           </ul>
         </li>
@@ -154,27 +154,27 @@
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="about-the-appeal/procedure" aria-describedby="procedure">
                   Appeal procedure
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="eligibility-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="procedure">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="site-status">
+                <a href="about-the-appeal/appeal-statement" aria-describedby="appeal-statement">
                   Appeal statement
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="site-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="appeal-statement">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="site-status">
+                <a href="about-the-appeal/common-ground" aria-describedby="appeal-documents">
                   Appeal documents
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="site-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="appeal-documents">Completed</strong>
             </li>
           </ul>
         </li>
@@ -193,19 +193,19 @@
             {% endif %}
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="company-information-status">
+                <a href="about-the-application/application-reference" aria-describedby="application-reference">
                   Application reference
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
+              <strong class="govuk-tag app-task-list__tag" id="application-reference">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="contact-details-status">
+                <a href="about-the-application/application" aria-describedby="application-form">
                   Upload documents
                 </a>
               </span>
-              <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="contact-details-status">
+              <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="application-form">
                 In progress
               </strong>
             </li>
@@ -216,7 +216,7 @@
 
               <li class="app-task-list__item">
                 <span class="app-task-list__task-name">
-                  <a href="#" aria-describedby="company-information-status">
+                  <a href="about-second-application/application-reference" aria-describedby="company-information-status">
                     Application reference
                   </a>
                 </span>
@@ -226,7 +226,7 @@
               </li>
               <li class="app-task-list__item">
                 <span class="app-task-list__task-name">
-                  <a href="#" aria-describedby="contact-details-status">
+                  <a href="about-second-application/application" aria-describedby="contact-details-status">
                     Upload documents
                   </a>
                 </span>
