--- a/app/views/manage/questionnaire/v11/env-impact/env-statement-check.html
+++ b/app/views/manage/questionnaire/v11/env-impact/env-statement-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did your screening opinion say the development needed an environmental statement?' %}
+{% set title = 'Did you do the environmental statement?' %}
 
 {% block questions %}
   {{ govukRadios({
